--- a/content/1.mdx
+++ b/content/1.mdx
@@ -1,15 +1,104 @@
 ---
-category: hero
+category: card
 ---
 
-<div className="bg-gradient-to-r from-blue-500 via-indigo-600 to-purple-700 text-white rounded-lg p-12 shadow-lg max-w-4xl mx-auto text-center">
-  <h1 className="text-5xl font-extrabold mb-4 drop-shadow-lg">
-    Welcome to Our Awesome Site
-  </h1>
-  <p className="text-lg max-w-xl mx-auto mb-8">
-    Discover amazing content and get inspired every day. Start your journey with us now!
-  </p>
-  <button className="bg-white text-purple-700 font-semibold px-6 py-3 rounded-full shadow-md hover:bg-gray-100 transition">
-    Get Started
-  </button>
-</div>
+<section className="max-w-6xl mx-auto px-6 py-16">
+    <div className="text-center mb-12">
+        <h2 className="text-4xl font-bold mb-4 bg-gradient-to-r from-gray-900 to-gray-600 dark:from-white dark:to-gray-300 bg-clip-text text-transparent">
+            Nasze Funkcje
+        </h2>
+        <p className="text-gray-600 dark:text-gray-400 max-w-xl mx-auto">
+            Proste rozwiązania dla złożonych problemów
+        </p>
+    </div>
+
+    <div className="grid gap-8 md:grid-cols-3">
+        <article className="group bg-white dark:bg-gray-900 rounded-2xl p-8 border border-gray-200 dark:border-gray-800 hover:border-blue-300 dark:hover:border-blue-700 transition-all duration-300 hover:-translate-y-1 hover:shadow-xl">
+            <div className="w-12 h-12 bg-blue-100 dark:bg-blue-900/30 rounded-xl flex items-center justify-center mb-6 group-hover:bg-blue-200 dark:group-hover:bg-blue-900/50 transition-colors">
+                <svg
+                    className="w-6 h-6 text-blue-600 dark:text-blue-400"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                >
+                    <path
+                        strokeLinecap="round"
+                        strokeLinejoin="round"
+                        strokeWidth={2}
+                        d="M13 10V3L4 14h7v7l9-11h-7z"
+                    />
+                </svg>
+            </div>
+
+            <h3 className="text-xl font-semibold mb-3 text-gray-900 dark:text-white">
+                Szybkość
+            </h3>
+            <p className="text-gray-600 dark:text-gray-400 mb-6 leading-relaxed">
+                Błyskawiczne ładowanie i płynna responsywność w każdym
+                scenariuszu użycia.
+            </p>
+            <button className="text-blue-600 dark:text-blue-400 font-medium hover:text-blue-700 dark:hover:text-blue-300 transition-colors">
+                Dowiedz się więcej →
+            </button>
+        </article>
+
+        <article className="group bg-white dark:bg-gray-900 rounded-2xl p-8 border border-gray-200 dark:border-gray-800 hover:border-emerald-300 dark:hover:border-emerald-700 transition-all duration-300 hover:-translate-y-1 hover:shadow-xl">
+            <div className="w-12 h-12 bg-emerald-100 dark:bg-emerald-900/30 rounded-xl flex items-center justify-center mb-6 group-hover:bg-emerald-200 dark:group-hover:bg-emerald-900/50 transition-colors">
+                <svg
+                    className="w-6 h-6 text-emerald-600 dark:text-emerald-400"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                >
+                    <path
+                        strokeLinecap="round"
+                        strokeLinejoin="round"
+                        strokeWidth={2}
+                        d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"
+                    />
+                </svg>
+            </div>
+
+            <h3 className="text-xl font-semibold mb-3 text-gray-900 dark:text-white">
+                Bezpieczeństwo
+            </h3>
+            <p className="text-gray-600 dark:text-gray-400 mb-6 leading-relaxed">
+                Enterprise-grade zabezpieczenia chronią Twoje dane na najwyższym
+                poziomie.
+            </p>
+            <button className="text-emerald-600 dark:text-emerald-400 font-medium hover:text-emerald-700 dark:hover:text-emerald-300 transition-colors">
+                Poznaj funkcje →
+            </button>
+        </article>
+
+        <article className="group bg-white dark:bg-gray-900 rounded-2xl p-8 border border-gray-200 dark:border-gray-800 hover:border-purple-300 dark:hover:border-purple-700 transition-all duration-300 hover:-translate-y-1 hover:shadow-xl">
+            <div className="w-12 h-12 bg-purple-100 dark:bg-purple-900/30 rounded-xl flex items-center justify-center mb-6 group-hover:bg-purple-200 dark:group-hover:bg-purple-900/50 transition-colors">
+                <svg
+                    className="w-6 h-6 text-purple-600 dark:text-purple-400"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                >
+                    <path
+                        strokeLinecap="round"
+                        strokeLinejoin="round"
+                        strokeWidth={2}
+                        d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
+                    />
+                </svg>
+            </div>
+
+            <h3 className="text-xl font-semibold mb-3 text-gray-900 dark:text-white">
+                UX Design
+            </h3>
+            <p className="text-gray-600 dark:text-gray-400 mb-6 leading-relaxed">
+                Intuicyjny interfejs zaprojektowany z myślą o potrzebach
+                użytkowników.
+            </p>
+            <button className="text-purple-600 dark:text-purple-400 font-medium hover:text-purple-700 dark:hover:text-purple-300 transition-colors">
+                Zobacz przykłady →
+            </button>
+        </article>
+    </div>
+
+</section>
