--- a/content/2.mdx
+++ b/content/2.mdx
@@ -2,40 +2,108 @@
 category: card
 ---
 
-<section className="max-w-5xl mx-auto px-6 py-12">
-  <h2 className="text-3xl font-bold mb-8 text-center text-gray-900 dark:text-white">
-    Our Features
-  </h2>
-  <div className="grid gap-6 sm:grid-cols-2 md:grid-cols-3">
-    <article className="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 flex flex-col">
-      <h3 className="text-xl font-semibold mb-2 text-gray-900 dark:text-white">Card Title 1</h3>
-      <p className="text-gray-600 dark:text-gray-300 flex-grow">
-        This is a concise description of the first feature or service offered.
-      </p>
-      <button className="mt-4 self-start bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-md transition">
-        Learn More
-      </button>
-    </article>
+<section className="relative max-w-7xl mx-auto px-12 py-20 overflow-hidden">
+  {/* Animated background elements */}
+  <div className="absolute inset-0 overflow-hidden pointer-events-none">
+    <div className="absolute -top-40 -right-40 w-80 h-80 bg-gradient-to-br from-purple-400/20 to-pink-400/20 rounded-full blur-3xl animate-pulse"></div>
+    <div className="absolute -bottom-40 -left-40 w-96 h-96 bg-gradient-to-tr from-blue-400/20 to-cyan-400/20 rounded-full blur-3xl animate-pulse" style={{animationDelay: '2s'}}></div>
+  </div>
 
-    <article className="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 flex flex-col">
-      <h3 className="text-xl font-semibold mb-2 text-gray-900 dark:text-white">Card Title 2</h3>
-      <p className="text-gray-600 dark:text-gray-300 flex-grow">
-        Brief details about the second feature to engage the user’s interest.
+  <div className="relative z-10">
+    <div className="text-center mb-16">
+      <h2 className="text-5xl md:text-6xl font-bold mb-6 bg-gradient-to-r from-purple-600 via-blue-600 to-cyan-500 bg-clip-text text-transparent leading-tight">
+        Nasze Funkcje
+      </h2>
+      <p className="text-xl text-gray-600 dark:text-gray-300 max-w-2xl mx-auto">
+        Odkryj innowacyjne rozwiązania, które zmienią sposób, w jaki pracujesz
       </p>
-      <button className="mt-4 self-start bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-md transition">
-        Learn More
-      </button>
-    </article>
+      <div className="mt-8 w-24 h-1 bg-gradient-to-r from-purple-500 to-blue-500 mx-auto rounded-full"></div>
+    </div>
 
-    <article className="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 flex flex-col">
-      <h3 className="text-xl font-semibold mb-2 text-gray-900 dark:text-white">Card Title 3</h3>
-      <p className="text-gray-600 dark:text-gray-300 flex-grow">
-        A short snippet describing the third feature or highlight.
-      </p>
-      <button className="mt-4 self-start bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-md transition">
-        Learn More
-      </button>
-    </article>
+    <div className="grid gap-8 md:gap-10 sm:grid-cols-2 lg:grid-cols-3">
+      <article className="group relative bg-white/10 dark:bg-gray-900/50 backdrop-blur-xl rounded-3xl p-8 border border-white/20 dark:border-gray-700/50 shadow-2xl hover:shadow-purple-500/25 transition-all duration-500 hover:-translate-y-2 hover:scale-105">
+        {/* Gradient border effect */}
+        <div className="absolute inset-0 rounded-3xl bg-gradient-to-r from-purple-500/50 to-blue-500/50 opacity-0 group-hover:opacity-100 transition-opacity duration-500 blur-xl -z-10"></div>
+        
+        {/* Icon container */}
+        <div className="relative mb-6">
+          <div className="w-16 h-16 bg-gradient-to-br from-purple-500 to-blue-600 rounded-2xl flex items-center justify-center mb-4 shadow-lg group-hover:shadow-purple-500/50 transition-shadow duration-300">
+            <svg className="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M13 10V3L4 14h7v7l9-11h-7z" />
+            </svg>
+          </div>
+        </div>
 
+        <h3 className="text-2xl font-bold mb-4 text-gray-900 dark:text-white group-hover:text-purple-400 transition-colors duration-300">
+          Szybkość Błyskawicy
+        </h3>
+        <p className="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed flex-grow">
+          Ultraszybkie ładowanie i responsywność, która zachwyci Twoich użytkowników od pierwszego kliknięcia.
+        </p>
+        <button className="relative overflow-hidden bg-gradient-to-r from-purple-600 to-blue-600 hover:from-purple-700 hover:to-blue-700 text-white px-6 py-3 rounded-xl font-semibold transition-all duration-300 transform hover:scale-105 hover:shadow-xl group-hover:shadow-purple-500/25">
+          <span className="relative z-10">Poznaj Więcej</span>
+          <div className="absolute inset-0 bg-white/20 translate-x-[-100%] group-hover:translate-x-[100%] transition-transform duration-700 skew-x-12"></div>
+        </button>
+      </article>
+
+      <article className="group relative bg-white/10 dark:bg-gray-900/50 backdrop-blur-xl rounded-3xl p-8 border border-white/20 dark:border-gray-700/50 shadow-2xl hover:shadow-emerald-500/25 transition-all duration-500 hover:-translate-y-2 hover:scale-105">
+        {/* Gradient border effect */}
+        <div className="absolute inset-0 rounded-3xl bg-gradient-to-r from-emerald-500/50 to-teal-500/50 opacity-0 group-hover:opacity-100 transition-opacity duration-500 blur-xl -z-10"></div>
+        
+        {/* Icon container */}
+        <div className="relative mb-6">
+          <div className="w-16 h-16 bg-gradient-to-br from-emerald-500 to-teal-600 rounded-2xl flex items-center justify-center mb-4 shadow-lg group-hover:shadow-emerald-500/50 transition-shadow duration-300">
+            <svg className="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
+            </svg>
+          </div>
+        </div>
+
+        <h3 className="text-2xl font-bold mb-4 text-gray-900 dark:text-white group-hover:text-emerald-400 transition-colors duration-300">
+          Bezpieczeństwo Premium
+        </h3>
+        <p className="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed flex-grow">
+          Wielowarstwowa ochrona i szyfrowanie klasy enterprise zapewniają maksymalne bezpieczeństwo Twoich danych.
+        </p>
+        <button className="relative overflow-hidden bg-gradient-to-r from-emerald-600 to-teal-600 hover:from-emerald-700 hover:to-teal-700 text-white px-6 py-3 rounded-xl font-semibold transition-all duration-300 transform hover:scale-105 hover:shadow-xl group-hover:shadow-emerald-500/25">
+          <span className="relative z-10">Dowiedz Się Więcej</span>
+          <div className="absolute inset-0 bg-white/20 translate-x-[-100%] group-hover:translate-x-[100%] transition-transform duration-700 skew-x-12"></div>
+        </button>
+      </article>
+
+      <article className="group relative bg-white/10 dark:bg-gray-900/50 backdrop-blur-xl rounded-3xl p-8 border border-white/20 dark:border-gray-700/50 shadow-2xl hover:shadow-orange-500/25 transition-all duration-500 hover:-translate-y-2 hover:scale-105 sm:col-span-2 lg:col-span-1">
+        {/* Gradient border effect */}
+        <div className="absolute inset-0 rounded-3xl bg-gradient-to-r from-orange-500/50 to-pink-500/50 opacity-0 group-hover:opacity-100 transition-opacity duration-500 blur-xl -z-10"></div>
+        
+        {/* Icon container */}
+        <div className="relative mb-6">
+          <div className="w-16 h-16 bg-gradient-to-br from-orange-500 to-pink-600 rounded-2xl flex items-center justify-center mb-4 shadow-lg group-hover:shadow-orange-500/50 transition-shadow duration-300">
+            <svg className="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+            </svg>
+          </div>
+        </div>
+
+        <h3 className="text-2xl font-bold mb-4 text-gray-900 dark:text-white group-hover:text-orange-400 transition-colors duration-300">
+          Doświadczenie Użytkownika
+        </h3>
+        <p className="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed flex-grow">
+          Intuicyjny design i płynne animacje tworzą niezapomniane wrażenia, które sprawią, że użytkownicy pokochają Twoją aplikację.
+        </p>
+        <button className="relative overflow-hidden bg-gradient-to-r from-orange-600 to-pink-600 hover:from-orange-700 hover:to-pink-700 text-white px-6 py-3 rounded-xl font-semibold transition-all duration-300 transform hover:scale-105 hover:shadow-xl group-hover:shadow-orange-500/25">
+          <span className="relative z-10">Eksploruj Funkcje</span>
+          <div className="absolute inset-0 bg-white/20 translate-x-[-100%] group-hover:translate-x-[100%] transition-transform duration-700 skew-x-12"></div>
+        </button>
+      </article>
+    </div>
+
+    {/* Bottom decoration */}
+    <div className="mt-20 text-center">
+      <div className="inline-flex items-center space-x-2 text-gray-500 dark:text-gray-400">
+        <div className="w-2 h-2 bg-purple-500 rounded-full animate-ping"></div>
+        <span className="text-sm font-medium">Stale rozwijamy nasze możliwości</span>
+        <div className="w-2 h-2 bg-blue-500 rounded-full animate-ping" style={{animationDelay: '1s'}}></div>
+      </div>
+    </div>
   </div>
 </section>
